--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,7 @@ include:
     shield: splitkb_aurora_sofle_left
   - board: nice_nano_v2
     shield: splitkb_aurora_sofle_right
+  - board: nice_nano_v2
+    shield: splitkb_aurora_corne_left
+  - board: nice_nano_v2
+    shield: splitkb_aurora_corne_right
