--- a/build.yaml
+++ b/build.yaml
@@ -16,4 +16,4 @@ include:
   - board: nice_nano_v2
     shield: splitkb_aurora_corne_left
   - board: nice_nano_v2
-    shield: splitkb_aurora_corne_right
+    shield: splitkb_aurora_corne_right nice_view_adapter nice_view
