--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -8,3 +8,7 @@
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=200
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
