--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -1,12 +1,6 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# Uncomment the following line to enable the Kyria OLED Display
-# CONFIG_ZMK_DISPLAY=y
-
-# Uncomment the following lines to enable RGB underglow
+# Enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
