Change display widgets

--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -6,3 +6,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=200
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+
+# display config
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
