Enabled external power control

--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -4,6 +4,7 @@
 
 # Uncomment the following line to enable the OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
