--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -3,5 +3,7 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_WPM=n
