--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -1,9 +1,8 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_WPM=n
+
+# increate bluetooth power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
