--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -4,5 +4,9 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=n
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_WPM=n
 
-# increate bluetooth power
+# increase bluetooth power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# enable reporting both battery levels
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
