Add bluetooth control bindings

--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -1,5 +1,9 @@
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_WPM=n
 
-# increase bluetooth power
+# try to improve connection stability
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# reduce number of profiles
+CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_PAIRED=3
