--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -61,5 +61,21 @@
             layers = <BASE NUM>;
             bindings = <&caps_word>;
         };
+
+        combo_colon {
+            timeout-ms = <COMBO_TERM_FAST>;
+            require-prior-idle-ms = <COMBO_PRIOR_IDLE>;
+            key-positions = <7 8>; // U+I
+            layers = <BASE>;
+            bindings = <&kp COLON>;
+        };
+
+        combo_tmux_prefix {
+            timeout-ms = <COMBO_TERM_FAST>;
+            require-prior-idle-ms = <COMBO_PRIOR_IDLE>;
+            key-positions = <3 4>; // E+R
+            layers = <BASE>;
+            bindings = <&kp LC(B)>;
+        };
     };
 };
