--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -6,4 +6,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
