--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: jradtilbrook
+      url-base: https://github.com/jradtilbrook
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: jradtilbrook
+      revision: patch-1
       import: app/west.yml
   self:
     path: config
