--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -1,6 +1,7 @@
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_WPM=n
 CONFIG_ZMK_IDLE_TIMEOUT=90000
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 
 # try to improve connection stability
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
