Revert "Try again to use my fork"
This reverts commit adba04b0f3c4358113bd31b78ce32757afe8660e.

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: jradtilbrook
-      url-base: https://github.com/jradtilbrook
   projects:
     - name: zmk
-      remote: jradtilbrook
-      revision: patch-1
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
