--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,9 @@
-# This file generates the GitHub Actions matrix
-# For simple board + shield combinations, add them
-# to the top level board and shield arrays, for more
-# control, add individual board + shield combinations to
-# the `include` property, e.g:
+# This file generates the GitHub Actions matrix.
+# For simple board + shield combinations, add them to the top level board and
+# shield arrays, for more control, add individual board + shield combinations
+# to the `include` property. You can also use the `cmake-args` property to
+# pass flags to the build command and `artifact-name` to assign a name to
+# distinguish build outputs from each other:
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
@@ -13,6 +14,12 @@
 #
 ---
 include:
+  - board: nice_nano_v2
+    shield: sofle_left nice_view_adapter nice_view
+    artifact-name: sofle_left
+  - board: nice_nano_v2
+    shield: sofle_right nice_view_adapter nice_view
+    artifact-name: sofle_right
   - board: nice_nano_v2
     shield: splitkb_aurora_corne_left nice_view_adapter nice_view
     artifact-name: aurora_corne_left
