--- a/config/encoder.dtsi
+++ b/config/encoder.dtsi
@@ -7,7 +7,7 @@
         a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <30>;
-        status = "okay";
+        status = "disabled";
     };
 
     right_encoder: encoder_right {
@@ -15,7 +15,7 @@
         a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <30>;
-        status = "okay";
+        status = "disabled";
     };
 
     sensors: sensors {
