--- a/config/encoder.dtsi
+++ b/config/encoder.dtsi
@@ -1,27 +1,15 @@
 /*
  * Override the encoder settings for Panasonic EVQWGD001
  */
-/ {
-    left_encoder: encoder_left {
-        compatible = "alps,ec11";
-        a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        steps = <30>;
-        status = "disabled";
-    };
+&left_encoder {
+    steps = <30>;
+};
 
-    right_encoder: encoder_right {
-        compatible = "alps,ec11";
-        a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        steps = <30>;
-        status = "disabled";
-    };
+&right_encoder {
+    steps = <30>;
+};
 
-    sensors: sensors {
-        compatible = "zmk,keymap-sensors";
-        sensors = <&left_encoder &right_encoder>;
-        triggers-per-rotation = <15>;
-    };
+&sensors {
+    triggers-per-rotation = <15>;
 };
 // vi: ft=dts textwidth=0 noautoindent
