--- a/build.yaml
+++ b/build.yaml
@@ -26,6 +26,6 @@ include:
   # - board: nice_nano_v2
   #   shield: splitkb_aurora_corne_right nice_view_adapter nice_view
   #   artifact-name: aurora_corne_right
-  # - board: nice_nano_v2
-  #   shield: settings_reset
-  #   artifact-name: settings_reset
+  - board: nice_nano_v2
+    shield: settings_reset
+    artifact-name: settings_reset
