--- a/config/settings.dtsi
+++ b/config/settings.dtsi
@@ -25,3 +25,6 @@
     // Fairly quickly release if no subsequent key pressed.
     release-after-ms = <300>;
 };
+&sl {
+    release-after-ms = <300>;
+};
