--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,5 +1,5 @@
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_IDLE_TIMEOUT=90000
+CONFIG_ZMK_SLEEP=y
 # try to improve connection stability
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
