--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,10 @@
 ---
 include:
   - board: nice_nano_v2
+    shield: caldera_left
+  - board: nice_nano_v2
+    shield: caldera_right
+  - board: nice_nano_v2
     shield: sofle_left nice_view_adapter nice_view
     artifact-name: sofle_left
   - board: nice_nano_v2
