--- a/build.yaml
+++ b/build.yaml
@@ -12,12 +12,13 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
----
 include:
   - board: nice_nano_v2
     shield: caldera_left
+    artifact-name: caldera_left
   - board: nice_nano_v2
     shield: caldera_right
+    artifact-name: caldera_right
   - board: nice_nano_v2
     shield: sofle_left nice_view_adapter nice_view
     artifact-name: sofle_left
@@ -30,6 +31,6 @@ include:
   - board: nice_nano_v2
     shield: splitkb_aurora_corne_right nice_view_adapter nice_view
     artifact-name: aurora_corne_right
-  # - board: nice_nano_v2
-  #   shield: settings_reset
-  #   artifact-name: settings_reset
+  - board: nice_nano_v2
+    shield: settings_reset
+    artifact-name: settings_reset
